# strongDNS2

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  aarch64  compile.md  config.h.in  get_ipv4.sh  get_ipv6.sh  ipv4.txt  ipv6.txt  list.h  makefile  mark_sites-nft.sh  mipsel  run.sh  setup_douyin.sh  strongDNS.c  strongDNS2.c  test.sh  x86_64  xxhash32-ref.c
mark_sites/: douyin  youtube
openwrt-contrib/etc/config/: strongDNS2
openwrt-contrib/etc/init.d/: strongDNS2
toolchains/: openwrt-aarch64.cmake  openwrt-mipsel.cmake  openwrt-x86_64.cmake
